# Samsan_tech_HackODS2026

./: .gitattributes  .gitignore  DATASETS.md  README.md  ai-log.md  index.qmd  pyproject.toml
.github/workflows/: deploy-gh-pages.yml  quarto-ci.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml
dashboard/: .gitattributes  _quarto.yml  index.qmd
dashboard/assets/: desempleo002_outputs.html  master_001_outputs.html
dashboard/docs/: index.html  search.json
datos/: conjunt_datos_enoe.csv  distribucioncsv.csv  electricity_sources.csv  eolico_golfo.csv  ocupaciones_pesca.csv  potencial_eolico_golfo_GWA.csv  potencial_solar_golfo_GSA.csv  produccion.csv  proyecciones.csv  renovables_hidrocarburos.csv  solar_golfo.csv  trabajadores_pesqueros_estado.csv
docs/: index.html
docs/dashboard/: index.html
notebooks/: 01_importacion_mapa.ipynb  Jupyter notebook master.ipynb  datos_ods8_veracruz_tabasco.csv  derrame-historia_002.ipynb  desempleo002.ipynb  desempleo_001.ipynb  gen_infraestructura.py  gen_master.py  infraestructura_001.ipynb  master_001.ipynb  reportes_chapopote_limpios.csv
notebooks/.ipynb_checkpoints/: 003 tipos de variables-checkpoint-checkpoint.ipynb  Unidades-economicas-segun-municipios-2014.csv  derrame-historia_001-checkpoint.ipynb  desempleo002-checkpoint.ipynb  desempleo_001-checkpoint.ipynb  reporte_ciudadanos001-checkpoint.ipynb
notebooks/desempleo/notebooks/.ipynb_checkpoints/: datos_ods8_veracruz_tabasco-checkpoint.csv  (+1 more)
practicas/reporte de ciudadanos/: reportes_chapopote_limpios.csv
scripts/: build_site.sh
